# Real-Time-Edge-Detection-Viewer

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/vision/: MainActivity.kt
app/src/main/java/com/example/vision/camera/: CameraController.kt
app/src/main/java/com/example/vision/gl/: ProcessedFrameRenderer.kt
app/src/main/java/com/example/vision/processing/: FrameData.kt  FrameProcessor.kt  NativeProcessor.kt  ProcessedFrame.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gl/: README.md
jni/: CMakeLists.txt  Processor.cpp
web/: package.json  tsconfig.json
web/src/: index.html  index.js  index.ts  styles.css
